admission/ValidatingAdmissionPolicy/policies/poststart-httpget-host/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: poststart-httpget-host-initcontainers
  annotations:
    kubeapt.io/uuid: "fbef4cf3-cf91-4c11-af0b-ab80b64edff8"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
